[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qattn"
requires-python = ">=3.8"
description = "Efficient GPU Kernels in Triton for Quantized Vision Transformers"
dynamic = ["dependencies", "version"]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Piotr Kluska", email = "klu@zurich.ibm.com" },
    { name = "Florian Scheidegger", email = "eid@zurich.ibm.com" },
    { name = "A. Cristiano I. Malossi", email = "acm@zurich.ibm.com" },
    { name = "Enrique S. Quintana-Ortí", email = "quintana@disca.upv.es" },
]

maintainers = [{ name = "Piotr Kluska", email = "klu@zurich.ibm.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
]

keywords = ["quantization", "vision transformers", "efficient", "gpu"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "qattn.__version__" }

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py310"
ignore-init-module-imports = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.isort]
combine-as-imports = true
detect-same-package = true
force-sort-within-sections = true
known-first-party = ["qattn"]

[project.urls]
homepage = "https://github.com/IBM/qattn"
repository = "https://github.com/IBM/qattn"
